tests/errors/test-overload_error.sac
// This test asserts that overloaded errors are printed as `filename:line: Abort:`
// SAC_TEST|include common.mk
// SAC_TEST|SAC2C_FLAGS += -check tc -b 5:cwf
// SAC_TEST|CALL_SAC2C := $(SAC2C) $(SAC2C_FLAGS)
//
// SAC_TEST|all: <file-name>
// SAC_TEST|<tab>$(CALL_SAC2C) $< 2>&1 | grep -Pi "^.*:\d+: Abort:$$" | $(GREP_COMMAND_OUTPUT) "" 1

int main ()
{
  return 0;
}

int main()
{
  return 1;
}